# nusic

./: .gitignore  README.md  setup.cfg
nusic/: __main__.py  constants.py  main.py  music.py  player.py
nusic/controls/: __init__.py  button.py  control.py  progress.py  text.py
