[metadata]
name = nusic
version = 1.0.0
description = pygame Music Player
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: Players
keywords = pygame, music, player
project_urls =
    Source=https://github.com/nfearnley/nusic
    Tracker=https://github.com/nfearnley/nusic/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
install_requires =
    pygame==2.0.1
    pywin32==300

[options.extras_require]
dev =
    autopep8==1.5.5
    flake8==3.8.4
    pytest==6.2.2

[options.entry_points]
console_scripts =
    nusic=nusic.__main__:main

[flake8]
ignore = E501
per-file-ignores =
    */__init__.py:F401,F403
